# eventmill_v01

./: .env.example  CNAME  README.md  build-event-mill.yaml  build-threatbrief-fusion.yaml  deploy.ps1  pyproject.toml
cloud_install/: Dockerfile.cloudrun  Dockerfile.wikijs  README.md  cloudbuild-wikijs.yaml  cloudbuild-zeek.yaml  cloudbuild.yaml  deploy-cloudrun-secrets.sh  deploy-cloudrun.sh  deploy-wikijs.sh  docker-compose.cloudrun.yml  provision-gcp-project.sh  provision-secrets.sh  provision-wikijs.sh  setup-deploy-server.sh
docs/change_log/: 2026-04-12-threat-intel-persistence-and-large-report-intake.md  2026-04-12-tiered-llm-routing-pdf-normalization-cli-improvements.md  2026-04-13-llm-timeout-fixes-dag-visualizer-cloud-run-stability.md  2026-04-17-llm-dispatcher-phase1.md  2026-04-18-mitre-lookup-llm-diagnostics-ingester-hardening.md
docs/guides/: linux_auth_log_analysis.md  network_forensics_analysis.md  plugin_development.md
docs/specs/: framework_architecture.md  llm-dispatcher-native-document-handling.md  manifest_schema.json  tool_plugin_spec.md
framework/: __init__.py
framework/cli/: __init__.py  shell.py
framework/cloud/: __init__.py  resolver.py
framework/cloud/gcp/: __init__.py  zeek.py
framework/llm/: __init__.py  client.py
framework/llm/backends/: __init__.py  base.py  gemini.py
framework/llm/providers/: __init__.py  gcp_gemini.json
framework/logging/: __init__.py  structured.py
framework/plugins/: loader.py  protocol.py
framework/reference_data/: README.md  __init__.py  mitre_attack.py  mitre_techniques.json
framework/session/: database.py  manager.py  models.py
plugins/log_analysis/log_investigator/: README.md  manifest.json
plugins/log_analysis/log_navigator/: README.md  manifest.json
plugins/log_analysis/log_pattern_analyzer/: README.md  manifest.json  tool.py
plugins/log_analysis/log_searcher/: README.md  manifest.json
plugins/log_analysis/threat_intel_ingester/: README.md  manifest.json  tool.py
plugins/network_forensics/: __init__.py
plugins/network_forensics/firewall_log_aggregator/: manifest.json  tool.py
plugins/network_forensics/pcap_ai_analyzer/: manifest.json  tool.py
plugins/network_forensics/pcap_flow_analyzer/: manifest.json  tool.py
plugins/network_forensics/pcap_ip_search/: manifest.json  (+1 more)
scripts/: build_mitre_lookup.py  verify_mitre_lookup.py
test_outputs/: crowdstrikegemini.json  crowdstrikegeminiv2.json  crowdstrikegeminiv3.json  crowdstrikegeminiv4.json  crowdstrikegeminiv5.json  csgemv6-ascii.md  csgemv6.md  csgemv7merm.md  csgemv8ascii.md  csgemv9-ascii-perpath.md  dragos.md  eventmill_llm_routing_design.md  eventmill_spec_review_v2.md  exports_attack_path_visualizer_attack_path_mermaid_20260418_211840.mmd  waterfall-v2.md  waterfall.md  waterfall_path-mermaid.mmd
tests/framework/: test_storage_resolver.py
(+37 files in other folders)
